CAKE-5003 Fix button placement on iOS

--- a/src/components/ScreenOne.scss
+++ b/src/components/ScreenOne.scss
@@ -13,6 +13,7 @@
 
 .content {
     line-height: 1.43 !important;
+    overflow-y: auto;
     padding: 28px 17px 20px;
 
     @media #{$mobile-devices} {
@@ -47,7 +48,6 @@
     padding: 0 10px;
 
     @media #{$mobile-devices} {
-        overflow: auto;
         padding-left: 0;
     }
 
